feat: add new block skils and code example

--- a/index.html
+++ b/index.html
@@ -61,6 +61,33 @@
           </section>
         </section>
       </section>
+      <section class="skils">
+        <h1>Skills</h1>
+        <ul class="skils_menu">
+          <li class="skils_menu_item">Git</li>
+          <li class="skils_menu_item">GitHub</li>
+          <li class="skils_menu_item">Figma</li>
+          <li class="skils_menu_item">JavaScript (Basic)</li>
+          <li class="skils_menu_item">Html</li>
+          <li class="skils_menu_item">Css(less/Sass)</li>
+          <li class="skils_menu_item">webpack</li>
+        </ul>
+      </section>
+      <section class="code">
+        <h1>Code example</h1>
+        <div class="code_example">
+          <p>
+            function numbers(n) { <br />
+            if (n.length >= 2) { <br />
+            const sum = n.reduce((total, amount) => total + amount); <br />
+            return sum; <br />
+            } else { <br />
+            } <br />
+            } <br />
+            const andrei = numbers([1, 2, 3, 4]); <br />
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
