feat: add new block Courses

--- a/index.html
+++ b/index.html
@@ -88,6 +88,26 @@
           </p>
         </div>
       </section>
+      <section class="courses">
+        <h1>Courses</h1>
+        <ul class="courses_menu">
+          <li class="courses_menu_item">
+            <a
+              class="courses_menu_item_link"
+              href="https://webformyself.com/javascript/?utm_medium=systema&utm_source=nashikursi&utm_campaign=javascript"
+              >Webformyself(javascript.The Complete Guide to Modern Web
+              Development).</a
+            >
+          </li>
+          <li class="courses_menu_item">
+            <a
+              class="courses_menu_item_link"
+              href="https://webformyself.com/verstka/?utm_medium=systema&utm_source=nashikursi&utm_campaign=verstkamaster"
+              >Webformyself(Layout master).</a
+            >
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
