add block education and english

--- a/index.html
+++ b/index.html
@@ -108,6 +108,17 @@
           </li>
         </ul>
       </section>
+      <section class="education">
+        <h1>Education</h1>
+        <p>
+          University: Belarusian State University of Informatics and
+          Radioelectronics,Faculty of infocommunications(2014-2019).
+        </p>
+      </section>
+      <section class="english">
+        <h1>English</h1>
+        <p>A2</p>
+      </section>
     </main>
   </body>
 </html>
