--- a/index.html
+++ b/index.html
@@ -120,5 +120,24 @@
         <p>A2</p>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container footer_option">
+        <div class="github">
+          <a class="contact_icon" href="https://github.com/andreiokcober"
+            ><i class="fa fa-github" aria-hidden="true"></i>
+            <p>andreiokcober</p>
+          </a>
+        </div>
+        <div class="year"><a href="">2021</a></div>
+        <div class="rs_school">
+          <a href="https://rs.school/"
+            ><img
+              class="rs_school_logo"
+              src="./images/rs_school.svg"
+              alt="Логотип"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
