add functionl menu

--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
   </head>
   <body>
     <header>
-      <a href="https://rs.school/"
+      <a href="https://rs.school/js/"
         ><img class="logo" src="./images/rs_school.svg" alt="Логотип"
       /></a>
       <nav>
         <ul class="menu">
-          <li><a class="menu__link" href="">Contacts</a></li>
-          <li><a class="menu__link" href="">Skils</a></li>
-          <li><a class="menu__link" href="">Code example</a></li>
-          <li><a class="menu__link" href="">Courses</a></li>
-          <li><a class="menu__link" href="">Education</a></li>
-          <li><a class="menu__link" href="">Portfolio</a></li>
+          <li><a class="menu__link" href="#contacts">Contacts</a></li>
+          <li><a class="menu__link" href="#skils">Skils</a></li>
+          <li><a class="menu__link" href="#code_example">Code example</a></li>
+          <li><a class="menu__link" href="#courses">Courses</a></li>
+          <li><a class="menu__link" href="#education">Education</a></li>
         </ul>
       </nav>
     </header>
@@ -37,7 +36,7 @@
             a goal to successfully complete the courses.
           </p>
           <section class="contacts">
-            <h1>Contacts</h1>
+            <h1><a name="contacts"></a>Contacts</h1>
             <ul class="contacts_link">
               <li class="contact">
                 <a class="contact_icon" href=""
@@ -62,6 +61,7 @@
         </section>
       </section>
       <section class="skils">
+        <a name="skils"></a>
         <h1>Skills</h1>
         <ul class="skils_menu">
           <li class="skils_menu_item">Git</li>
@@ -74,6 +74,7 @@
         </ul>
       </section>
       <section class="code">
+        <a name="code_example"></a>
         <h1>Code example</h1>
         <div class="code_example">
           <p>
@@ -89,6 +90,7 @@
         </div>
       </section>
       <section class="courses">
+        <a name="courses"></a>
         <h1>Courses</h1>
         <ul class="courses_menu">
           <li class="courses_menu_item">
@@ -109,6 +111,7 @@
         </ul>
       </section>
       <section class="education">
+        <a name="education"></a>
         <h1>Education</h1>
         <p>
           University: Belarusian State University of Informatics and
@@ -130,7 +133,7 @@
         </div>
         <div class="year"><a href="">2021</a></div>
         <div class="rs_school">
-          <a href="https://rs.school/"
+          <a href="https://rs.school/js/"
             ><img
               class="rs_school_logo"
               src="./images/rs_school.svg"
