--- a/index.html
+++ b/index.html
@@ -108,6 +108,37 @@
           </li>
         </ul>
       </section>
+      <section class="education">
+        <a name="education"></a>
+        <h1>Education</h1>
+        <p>
+          University: Belarusian State University of Informatics and
+          Radioelectronics,Faculty of infocommunications(2014-2019).
+        </p>
+      </section>
+      <section class="english">
+        <h1>English</h1>
+        <p>A2</p>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container footer_option">
+        <div class="github">
+          <a class="contact_icon" href="https://github.com/andreiokcober"
+            ><i class="fa fa-github" aria-hidden="true"></i>
+            <p>andreiokcober</p>
+          </a>
+        </div>
+        <div class="year"><a href="">2021</a></div>
+        <div class="rs_school">
+          <a href="https://rs.school/js/"
+            ><img
+              class="rs_school_logo"
+              src="./images/rs_school.svg"
+              alt="Логотип"
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
