fix: fix validator

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       /></a>
       <nav>
         <ul class="menu">
-          <li><a class="menu__link" href="">Contacts</a></li>
-          <li><a class="menu__link" href="">Skils</a></li>
-          <li><a class="menu__link" href="">Code example</a></li>
-          <li><a class="menu__link" href="">Courses</a></li>
-          <li><a class="menu__link" href="">Education</a></li>
+          <li><a class="menu__link" href="#contaсts">Contacts</a></li>
+          <li><a class="menu__link" href="#skils">Skils</a></li>
+          <li><a class="menu__link" href="#code">Code example</a></li>
+          <li><a class="menu__link" href="#courses">Courses</a></li>
+          <li><a class="menu__link" href="#education">Education</a></li>
           <li><a class="menu__link" href="">Portfolio</a></li>
         </ul>
       </nav>
     </header>
     <main class="main-conteiner">
-      <section class="About_me">
+      <div class="About_me">
         <div class="foto">
           <img class="foto_logo" src="./images/avatar.png" alt="Моя аватарка" />
         </div>
@@ -37,7 +37,7 @@
             a goal to successfully complete the courses.
           </p>
           <section class="contacts">
-            <h1>Contacts</h1>
+            <h2 id="contaсts">Contacts</h2>
             <ul class="contacts_link">
               <li class="contact">
                 <a class="contact_icon" href=""
@@ -60,9 +60,9 @@
             </ul>
           </section>
         </section>
-      </section>
+      </div>
       <section class="skils">
-        <h1>Skills</h1>
+        <h2 id="skils">Skills</h2>
         <ul class="skils_menu">
           <li class="skils_menu_item">Git</li>
           <li class="skils_menu_item">GitHub</li>
@@ -74,7 +74,7 @@
         </ul>
       </section>
       <section class="code">
-        <h1>Code example</h1>
+        <h2 id="code">Code example</h2>
         <div class="code_example">
           <p>
             function numbers(n) { <br />
@@ -89,7 +89,7 @@
         </div>
       </section>
       <section class="courses">
-        <h1>Courses</h1>
+        <h2 id="courses">Courses</h2>
         <ul class="courses_menu">
           <li class="courses_menu_item">
             <a
@@ -109,15 +109,14 @@
         </ul>
       </section>
       <section class="education">
-        <a name="education"></a>
-        <h1>Education</h1>
+        <h2 id="education">Education</h2>
         <p>
           University: Belarusian State University of Informatics and
           Radioelectronics,Faculty of infocommunications(2014-2019).
         </p>
       </section>
       <section class="english">
-        <h1>English</h1>
+        <h2 id="education">English</h2>
         <p>A2</p>
       </section>
     </main>
