--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </p>
       </section>
       <section class="english">
-        <h2 id="education">English</h2>
+        <h2>English</h2>
         <p>A2</p>
       </section>
     </main>
