feat: add block portfolio and adaptive

--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
   </head>
   <body>
     <header>
-      <a href="https://rs.school/"
-        ><img class="logo" src="./images/rs_school.svg" alt="Логотип"
-      /></a>
-      <nav>
-        <ul class="menu">
-          <li><a class="menu__link" href="#contaсts">Contacts</a></li>
-          <li><a class="menu__link" href="#skils">Skils</a></li>
-          <li><a class="menu__link" href="#code">Code example</a></li>
-          <li><a class="menu__link" href="#courses">Courses</a></li>
-          <li><a class="menu__link" href="#education">Education</a></li>
-          <li><a class="menu__link" href="">Portfolio</a></li>
-        </ul>
-      </nav>
+      <div class="header">
+        <div class="logotip">
+          <a href="https://rs.school/"
+            ><img class="logo" src="./images/rs_school.svg" alt="Логотип"
+          /></a>
+        </div>
+        <nav>
+          <ul class="menu">
+            <li><a class="menu__link" href="#contaсts">Contacts</a></li>
+            <li><a class="menu__link" href="#skils">Skils</a></li>
+            <li><a class="menu__link" href="#code">Code</a></li>
+            <li><a class="menu__link" href="#courses">Courses</a></li>
+            <li><a class="menu__link" href="#education">Education</a></li>
+            <li><a class="menu__link" href="#portfolio">Portfolio</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main class="main-conteiner">
       <div class="About_me">
@@ -74,7 +78,7 @@
         </ul>
       </section>
       <section class="code">
-        <h2 id="code">Code example</h2>
+        <h2 id="code">Code</h2>
         <div class="code_example">
           <p>
             function numbers(n) { <br />
@@ -118,6 +122,66 @@
       <section class="english">
         <h2>English</h2>
         <p>A2</p>
+      </section>
+      <section class="portfolio">
+        <h2 id="portfolio">Portfolio</h2>
+        <div class="portfolio_main">
+          <div class="portfolio_left">
+            <figure>
+              <a target="_blank" href="https://andreiokcober.github.io/Venom-2/"
+                ><img
+                  class="portfolio_logo"
+                  src="./images/venom.png"
+                  alt="venom"
+              /></a>
+              <figcaption class="portfolio_img_figcaption">
+                Trailer Venom-2
+              </figcaption>
+            </figure>
+          </div>
+          <div class="Portfolio_right">
+            <p>
+              Трейлер-визитка к премьере кинофильма Веном-2. Адаптивная верстка
+              под все устройства. Используемые инструменты : HTML, CSS ,
+              JavaScript
+            </p>
+          </div>
+        </div>
+        <div class="portfolio_main">
+          <div class="portfolio_left">
+            <figure>
+              <a target="_blank" href="https://andreiokcober.github.io/Blogin/"
+                ><img
+                  class="portfolio_logo"
+                  src="./images/Blogin.png"
+                  alt="venom"
+              /></a>
+              <figcaption class="portfolio_img_figcaption">Blogin</figcaption>
+            </figure>
+          </div>
+          <div class="Portfolio_right">
+            <p>Верстка макета Blogin. Используемые инструменты : HTML, CSS</p>
+          </div>
+        </div>
+        <div class="portfolio_main">
+          <div class="portfolio_left">
+            <figure>
+              <a target="_blank" href="https://andreiokcober.github.io/Biruang/"
+                ><img
+                  class="portfolio_logo"
+                  src="./images/Biruang.png"
+                  alt="venom"
+              /></a>
+              <figcaption class="portfolio_img_figcaption">Biruang</figcaption>
+            </figure>
+          </div>
+          <div class="Portfolio_right">
+            <p>
+              Верстка макета Biruang. Используемые инструменты : HTML, CSS ,
+              JavaScript
+            </p>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
